# chess

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
GUI/: CMakeLists.txt  main.cpp
GUI/include/GUI/: GUI.hpp  game_interface.hpp  gui_player.hpp
GUI/src/: GUI.cpp  game_interface.cpp  gui_player.cpp
bot/include/: player.hpp
game_logic/: CMakeLists.txt  uml_diagram.drawio
game_logic/include/: bitboard_operations.hpp  board.hpp  defs.hpp  temp_piece.hpp
game_logic/include/game_logic/: bishop.hpp  board.hpp  board_manager.hpp  defs.hpp  fen_parser.hpp  game.hpp  game_state.hpp  i_player.hpp  king.hpp  knight.hpp  legal_moves_generator.hpp  move.hpp  move_generator.hpp  move_maker.hpp  move_type.hpp  pawn.hpp  piece.hpp  pieces_list.hpp  position_hasher.hpp  position_loader.hpp  queen.hpp  rook.hpp
game_logic/include/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  sliding_piece.hpp
game_logic/src/: bishop.cpp  board.cpp  board_manager.cpp  fen_parser.cpp  game.cpp  game_state.cpp  king.cpp  knight.cpp  legal_moves_generator.cpp  move_generator.cpp  move_maker.cpp  pawn.cpp  piece.cpp  position_hasher.cpp  position_loader.cpp  queen.cpp  rook.cpp  sliding_piece.cpp
game_logic/test/: helper_test_functions.hpp  main_test.cpp  perft_test.cpp  test_bishop.cpp  test_game_state.cpp  test_king.cpp  test_knight.cpp  test_legal_moves_generator.cpp  test_number_of_positions.cpp  test_pawn.cpp  test_piece.cpp  test_position_loader.cpp  test_queen.cpp  test_result_stocfish  test_rook.cpp
include/: GUI.hpp  chessboard.hpp  game.hpp  move.hpp  pieces.hpp
src/: GUI.cpp  chessboard.cpp  game.cpp  pieces.cpp
test/: test_castle.cpp  test_movement.cpp  test_position.cpp
